--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 		<a title="Volver al inicio" href="index.html">
-			<img src="https://imagizer.imageshack.com/v2/955x226q90/922/ILnLVZ.png" alt=" Logo Madplays" 
+			<img src="https://imagizer.imageshack.com/v2/955x226q90/922/ILnLVZ.png" alt=" Logo Madplays"  
 				 class="logo1" />
 		</a>
 
@@ -40,20 +40,20 @@
 		<section class="noticiasdestacado" class="size">
 			<a href="Lol11.html"><img src="https://imagizer.imageshack.com/v2/1219x671q50/924/uTvtcG.png"
 					alt="League of legend"  class="size"/></a>
-			<a href="obras.html"><img src="https://imagizer.imageshack.com/v2/1219x671q50/922/Cemjlw.png" class="size" alt=" CS GO"
+			<a href="CSGO.html"><img src="https://imagizer.imageshack.com/v2/1219x671q50/922/Cemjlw.png" class="size" alt=" CS GO"
 					 /></a>
 		</section>
 		<h2 class="titulos">Recientes</h2>
 		<section class="noticiasdestacado" class="size">
-			<a href="obras.html"><img src="https://imagizer.imageshack.com/v2/972x600q90/923/pXeom6.png" class="size" alt=""
+			<a href="Ibai.html"><img src="https://imagizer.imageshack.com/v2/972x600q90/923/pXeom6.png" class="size" alt=""
 					 /></a>
-			<a href="obras.html"><img src="https://imagizer.imageshack.com/v2/1134x600q90/923/WAnGsF.png" class="size" alt=""
+			<a href="NVIDIA.html"><img src="https://imagizer.imageshack.com/v2/1134x600q90/923/WAnGsF.png" class="size" alt=""
 					 /></a>
 		</section>
 		<section class="noticiasdestacado" class="size">
-			<a href="obras.html"><img src="https://imagizer.imageshack.com/v2/1191x671q90/923/hG0LMl.png" class="size" alt=""
+			<a href="CDRED.html"><img src="https://imagizer.imageshack.com/v2/1191x671q90/923/hG0LMl.png" class="size" alt=""
 					 /></a>
-			<a href="obras.html"><img src="https://imagizer.imageshack.com/v2/1007x671q90/922/ey7b3k.png" class="size" alt=""
+			<a href="C9.html"><img src="https://imagizer.imageshack.com/v2/1007x671q90/922/ey7b3k.png" class="size" alt=""
 					 /></a>
 		</section>
 		
