--- a/noticias.html
+++ b/noticias.html
@@ -33,7 +33,7 @@
 	</header>
 
 	<main>
-		<div>
+		<div class="sep">
 			<h2>Noticias</h2>
 			<section>
 
@@ -48,10 +48,10 @@
 					</article>
 				</div>
 
-				<div class="noticias" id=riot>
+				<div class="noticias" >
 					<a><img src="https://imagizer.imageshack.com/v2/200x150q90/924/F0ZYs7.png" alt="" /></a>
 					<article>
-						<a href="obras.html" class="link">
+						<a href="CSGO.html" class="link">
 							<h2 class="h2noticias">CS:GO VS VALORANT</h2>
 						</a>
 						<p>A un años de la salida del FPS de Riot Games ¿pudo el CS manteder su volumen de jugadores?.
@@ -59,10 +59,10 @@
 					</article>
 				</div>
 
-				<div class="noticias" id="ibai">
+				<div class="noticias">
 					<a><img src="https://imagizer.imageshack.com/v2/200x150q90/923/5xmvJ6.png" alt="" /></a>
 					<article>
-						<a href="obras.html" class="link">
+						<a href="Ibai.html" class="link">
 							<h2 class="h2noticias">IBAI ROMPE NUEVO RECORD</h2>
 						</a>
 						<p>Ibai llanos streamer español vuelve a romper record de audiencia en la plataforma de Twitch .
@@ -71,10 +71,10 @@
 				</div>
 
 
-				<div class="noticias" id="projekt">
+				<div class="noticias">
 					<a><img src="https://imagizer.imageshack.com/v2/200x150q90/924/wBTtri.png" alt="" /></a>
 					<article>
-						<a href="obras.html" class="link">
+						<a href="CDRED.html" class="link">
 							<h2 class="h2noticias">OTRO GOLPE PARA CD PROJEKT</h2>
 						</a>
 						<p>Las acciones del estudio polaco tiene otra caida en la bolsa. Que acciones puede tomar la
@@ -82,10 +82,10 @@
 					</article>
 				</div>
 
-				<div class="noticias" id="could">
+				<div class="noticias" >
 					<a><img src="https://imagizer.imageshack.com/v2/200x150q90/922/85F4KU.png" alt="" /></a>
 					<article>
-						<a href="obras.html" class="link">
+						<a href="C9.html" class="link">
 							<h2 class="h2noticias">COULD 9 SE RENUEVA</h2>
 						</a>
 						<p>Cambios de roster del equipo estadounidense. Este nuevo C9 promete sorprender en sus futuros
@@ -93,6 +93,18 @@
 					</article>
 
 
+				</div>
+
+				<div class="noticias" id="could">
+					<a><img src="https://imagizer.imageshack.com/v2/200x150q90/922/85F4KU.png" alt="" /></a>
+					<article>
+						<a href="Blizzard.html" class="link">
+							<h2 class="h2noticias">Blizzard los juegos que vienen</h2>
+						</a>
+						<p>El director de WOW tiene muchas ganas de que los fans vean lo que la compañía prepara.</p>
+					</article>
+	
+	
 				</div>
 			</section>
 
