--- a/reseñas.html
+++ b/reseñas.html
@@ -31,7 +31,7 @@
 		</ul>
 
 	</header>
-	<div >
+	<div class="sep">
 		<h2>Reseñas</h2>
 
 		<section>
@@ -39,17 +39,17 @@
 			<div class="noticias">
 				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/922/HvQxeg.png" alt="" /></a>
 				<article>
-					<a href="obras.html" class="link">
+					<a href="NVIDIA.html" class="link">
 						<h2 class="h2noticias">NVIDIA NEXT GEN</h2>
 					</a>
 					<p> Las nuevas placas graficas de NVIDIA prometen revolucionar la industria esta generacion.</p>
 				</article>
 			</div>
 
-			<div class="noticias" id=riot>
+			<div class="noticias">
 				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/923/zXZGYJ.png" alt="" /></a>
 				<article>
-					<a href="obras.html" class="link">
+					<a href="Loop.html" class="link">
 						<h2 class="h2noticias">HACER MUCHO CON POCO</h2>
 					</a>
 					<p> La nueva sorpresa de los amantes roguelite. Estas listo para completar el loop y no caer en el
@@ -58,42 +58,54 @@
 				</article>
 			</div>
 
-			<div class="noticias" id="ibai">
+			<div class="noticias">
 				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/923/5xmvJ6.png" alt="" /></a>
 				<article>
-					<a href="obras.html" class="link">
-						<h2 class="h2noticias">IBAI ROMPE NUEVO RECORD</h2>
+					<a href="RE8.html" class="link">
+						<h2 class="h2noticias">Resident Evil 8: Village</h2>
 					</a>
-					<p>Ibai llanos streamer español vuelve a romper record de audiencia en la plataforma de Twitch .
+					<p>la ultima entrega de la mas longeva saga de survival horror.
 					</p>
 				</article>
 			</div>
 
 
-			<div class="noticias" id="projekt">
+			<div class="noticias">
 				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/924/wBTtri.png" alt="" /></a>
 				<article>
-					<a href="obras.html" class="link">
-						<h2 class="h2noticias">OTRO GOLPE PARA CD PROJEKT</h2>
+					<a href="zero.html" class="link">
+						<h2 class="h2noticias">Subnautica: Below Zero </h2>
 					</a>
-					<p>Las acciones del estudio polaco tiene otra caida en la bolsa. Que acciones puede tomar la
-						empresa.</p>
+					<p>A medio camino entre la expansión y la secuela, que nos devuelve al planeta alienígena 4546B.</p>
 				</article>
 			</div>
 
-			<div class="noticias" id="could">
+			<div class="noticias">
 				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/922/85F4KU.png" alt="" /></a>
 				<article>
-					<a href="obras.html" class="link">
-						<h2 class="h2noticias">COULD 9 SE RENUEVA</h2>
+					<a href="Gloria.html" class="link">
+						<h2 class="h2noticias">Siege Survival: Gloria Victis</h2>
 					</a>
-					<p>Cambios de roster del equipo estadounidense. Este nuevo C9 promete sorprender en sus futuros
-						enfrentamientos .</p>
+					<p> Un juego de estrategia y supervivencia en el que tendrás que mantener a tu ejército desde la retaguardia.</p>
 				</article>
 
 
 			</div>
-		</section>
+
+			<div class="noticias">
+				<a><img src="https://imagizer.imageshack.com/v2/200x150q90/924/wBTtri.png" alt="" /></a>
+				<article>
+					<a href="returnal.html" class="link">
+						<h2 class="h2noticias">Returnal</h2>
+					</a>
+					<p>La nueva apuesta de Housemarque por trasladar la experiencia arcade y roguelike a un juego con gráficos de nueva generación .</p>
+				</article>
+			</div>
+
+
+
+	</div>
+	</section>
 
 
 
