--- a/lanzamientos.html
+++ b/lanzamientos.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="En Madplays encontrarás noticias, reseñas, lanzamientos del mundo del videojuego. 
 		Información de los E-sports de campeonatos, partidas y los equipos. ">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="preconnect" href="">
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ubuntu+Condensed&display=swap"
 		rel="stylesheet">
 </head>
